--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ input[type="checkbox"]:checked:after, input[type="radio"]:checked:after { conten
 
             <table class="data-table" style="border: 1px solid black; margin-top: 0;">
                 <tr style="height: 25px; border-bottom: none;">
-                    <td style="border: none; padding-right: 0;"><label>Date (วันที่สมัคร)</label><input type="date" name="date_applied" style="width: 50%;"></td>
+                    <td style="border: none; padding-right: 0;"><label>Date (วันที่เขียน)</label><input type="date" name="date_applied" style="width: 50%;"></td>
                     <td style="border: none; padding-left: 5px;"><label>Expected Salaly (เงินเดือนที่คาดหวัง)</label><input type="text" name="expected_salary" style="width: 50%;"></td>
                     <td style="border: none; border-left: 1px solid black; padding-left: 5px;">
                         <label style="margin-right: 5px;">Age</label><input type="number" name="age" style="width: 15%; margin-right: 5px;">
@@ -692,3 +692,4 @@ input[type="checkbox"]:checked:after, input[type="radio"]:checked:after { conten
     </form>
 </body>
 </html>
+
