--- a/index.html
+++ b/index.html
@@ -261,8 +261,7 @@ input[type="checkbox"]:checked:after, input[type="radio"]:checked:after { conten
             <h1>JOB APPLICATION FORM</h1>
             <div class="notes-box">
                 ข้อปฏิบัติในการสมัครงาน:
-                <ol style="margin: 0; padding-left: 20px;">
-                    
+                <ol style="margin: 0; padding-left: 20px;"
                     <li>เพื่อประโยชน์ในการทำงานร่วมกัน ข้อมูลนี้จะถูกเก็บเป็นความลับตามพรบ.คุ้มครองข้อมูลส่วนบุคคล</li>
                     <li>ข้อมูลนี้ใช้เพื่อประกอบการพิจารณาคัดเลือกเท่านั้น สำหรับข้อมูลของบุคคลที่ไม่ได้รับการจ้างงานเป็นพนักงาน บริษัทฯจะเก็บไว้ระยะ 6 เดือนและจะทำลายทิ้งทันที</li>
                 </ol>
@@ -692,5 +691,6 @@ input[type="checkbox"]:checked:after, input[type="radio"]:checked:after { conten
     </form>
 </body>
 </html>
+
 
 
