--- a/index.html
+++ b/index.html
@@ -551,8 +551,8 @@ input[type="checkbox"]:checked:after, input[type="radio"]:checked:after { conten
         </table>
 
         <div style="margin-top: 20px; font-size: 8pt; line-height: 1.2;">
-            [cite_start]<p>I hereby certify that all the provided information is true the best of me knowledge. I voluntarily give the company the right to carry out whatever reference-check and If company accepted to work I agree to use collect and check that such information at any time as necessary, any necessary based on the above information of its consideration. I undertake to render any assistance necessary. Finally, I understand that any false information provided or false statements in the course of the interview, it would be sufficient grounds for non-employment or if already employed, for dismissal for just cause. [cite: 165, 166, 167]</p>
-            [cite_start]<p>ข้าพเจ้าขอรับรองว่าข้อมูลทั้งหมดที่ให้ไว้เป็นความจริงสมบูรณ์ถูกต้องที่สุดตามที่ข้าพเจ้าทราบและเชื่อมั่น ข้าพเจ้ายินดีให้บริษัทท่าการตรวจสอบประวัติของข้าพเจ้าตามที่ ข้าพเจ้าได้เขียนมาสุดแล้วแต่ทางบริษัทจะเห็นเป็นสมควรและหากบริษัทรับข้าพเจ้าท่างานแล้ว ข้าพเจ้ายินยอมให้ใช้จัดเก็บตรวจสอบข้อมูลดังกล่าวได้ดลอดเวลาตามที่จําเป็น ข้าพเจ้ายินดีที่จะให้ความสนับสนุนเท่าที่จำเป็นแก่บริษัทอีกด้วย ที่สุดนี้ข้าพเจ้าเข้าใจดีว่าการปิดบังหรือให้ข้อความไม่ตรงกับความเป็นจริงในใบสมัครนี้จะมีผลให้ข้าพเจ้าหมดสิทธิ ในการพิจารณาเข้าเป็นพนักงานของบริษัทหรือถูกเลิกจ้างในภายหลังที่ได้รับการเข้าทางานแล้ว ซึ่งหมายถึงการจ้างแรงงานที่ได้ทำขึ้นถือเป็นโมฆะ [cite: 168]</p>
+            <p>I hereby certify that all the provided information is true the best of me knowledge. I voluntarily give the company the right to carry out whatever reference-check and If company accepted to work I agree to use collect and check that such information at any time as necessary, any necessary based on the above information of its consideration. I undertake to render any assistance necessary. Finally, I understand that any false information provided or false statements in the course of the interview, it would be sufficient grounds for non-employment or if already employed, for dismissal for just cause. [cite: 165, 166, 167]</p>
+            <p>ข้าพเจ้าขอรับรองว่าข้อมูลทั้งหมดที่ให้ไว้เป็นความจริงสมบูรณ์ถูกต้องที่สุดตามที่ข้าพเจ้าทราบและเชื่อมั่น ข้าพเจ้ายินดีให้บริษัทท่าการตรวจสอบประวัติของข้าพเจ้าตามที่ ข้าพเจ้าได้เขียนมาสุดแล้วแต่ทางบริษัทจะเห็นเป็นสมควรและหากบริษัทรับข้าพเจ้าท่างานแล้ว ข้าพเจ้ายินยอมให้ใช้จัดเก็บตรวจสอบข้อมูลดังกล่าวได้ดลอดเวลาตามที่จําเป็น ข้าพเจ้ายินดีที่จะให้ความสนับสนุนเท่าที่จำเป็นแก่บริษัทอีกด้วย ที่สุดนี้ข้าพเจ้าเข้าใจดีว่าการปิดบังหรือให้ข้อความไม่ตรงกับความเป็นจริงในใบสมัครนี้จะมีผลให้ข้าพเจ้าหมดสิทธิ ในการพิจารณาเข้าเป็นพนักงานของบริษัทหรือถูกเลิกจ้างในภายหลังที่ได้รับการเข้าทางานแล้ว ซึ่งหมายถึงการจ้างแรงงานที่ได้ทำขึ้นถือเป็นโมฆะ [cite: 168]</p>
         </div>
 
         <div style="display: flex; justify-content: flex-end; margin-top: 30px; font-size: 9pt;">
@@ -581,4 +581,5 @@ input[type="checkbox"]:checked:after, input[type="radio"]:checked:after { conten
     </form>
 </body>
 </html>
+
 
