--- a/index.html
+++ b/index.html
@@ -33,6 +33,28 @@ input[type="checkbox"], input[type="radio"] {
 }
 input[type="checkbox"]:checked:after, input[type="radio"]:checked:after { content: '✓'; font-size: 7pt; line-height: 1; display: block; text-align: center; color: black; }
 
+/* Photo Box */
+.photo-cell { width: 150px; text-align: right; position: relative; } 
+.photo-box { 
+    border: 1px solid black; 
+    width: 80px; height: 90px; 
+    margin-left: auto;
+    margin-bottom: 3px;
+    position: relative;
+    overflow: hidden; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.attach-photo-text { font-size: 8pt; position: absolute; z-index: 10; padding: 5px; text-align: center; }
+.photo-box img { max-width: 100%; max-height: 100%; object-fit: contain; position: absolute; z-index: 1; display: none; }
+.photo-box input[type="file"] { position: absolute; top: 0; left: 0; width: 100%; height: 100%; opacity: 0; cursor: pointer; z-index: 2; }
+.tg-logo-footer { font-weight: bold; font-size: 8pt; text-align: center; }
+
+h1 { text-align: center; font-size: 16pt; margin: 10px 0; }
+.notes-box { font-size: 9pt; line-height: 1.3; margin-bottom: 15px; border: 1px solid black; padding: 5px; }
+h2.section-title { font-size: 11pt; font-weight: bold; background-color: #f0f0f0; border: 1px solid black; padding: 3px 5px; margin: 15px 0 5px 0; }
+
 
 /* =================================================================== */
 /* 📱 MOBILE VIEW STYLES (Responsive Design for small screens) - FINAL OPTIMIZED */
@@ -68,7 +90,7 @@ input[type="checkbox"]:checked:after, input[type="radio"]:checked:after { conten
         width: 100% !important; 
         padding: 8px 10px; 
         border: none !important;
-        border-bottom: 1px dotted #ccc !important; 
+        border-bottom: 1px solid #ddd !important; /* เส้นแบ่งรายการ */
         height: auto;
     }
     .data-table tr:last-child td { border-bottom: none !important; }
@@ -84,7 +106,7 @@ input[type="checkbox"]:checked:after, input[type="radio"]:checked:after { conten
         width: 100%; /* Input เต็มบรรทัด */
         font-size: 11pt;
         font-weight: bold; 
-        border-bottom: 1px solid #666; 
+        border-bottom: 1px solid #666; /* เส้นใต้ที่ชัดเจน */
         padding-bottom: 2px;
     }
     
