--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ h2.section-title { font-size: 11pt; font-weight: bold; background-color: #f0f0f0
         width: 100% !important; 
         padding: 8px 10px; 
         border: none !important;
-        border-bottom: 1px solid #ddd !important; /* เส้นแบ่งรายการ */
+        border-bottom: 1px dotted #ccc !important; /* เส้นแบ่งรายการ */
         height: auto;
     }
     .data-table tr:last-child td { border-bottom: none !important; }
